// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article component renders correctly 1`] = `
<div>
  <article
    class="article"
  >
    <header>
      <h1
        class="headline"
      >
        test-title
      </h1>
    </header>
    <div
      class="authorList"
    >
      Article Authors
      <ul>
        <li>
          <a
            aria-label="test-user1 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span />
          </a>
        </li>
        <li>
          <a
            aria-label="test-user2 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span />
          </a>
        </li>
      </ul>
    </div>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
    <div
      class="edit"
    >
      <a
        href="https://github.com/nodejs/nodejs.dev/edit/main/content/learn/test-path"
      >
        <span>
          Edit this page on GitHub
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil "
          data-icon="pencil"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      class="pagination"
    >
      <li>
        <a
          href="test-slug"
          rel="prev"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-left "
            data-icon="angles-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-right: 5px;"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L269.3 256 406.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
              fill="currentColor"
            />
          </svg>
          Prev
        </a>
      </li>
      <li>
        <a
          href="test-slug"
          rel="next"
        >
          Next
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-right "
            data-icon="angles-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-left: 5px;"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L370.7 256 233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L178.7 256 41.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ul>
  </article>
</div>
`;

exports[`Article component renders correctly in blog mode 1`] = `
<div>
  <article
    class="article"
  >
    <header>
      <h1
        class="headline"
      >
        test-title
      </h1>
    </header>
    <h5
      class="list"
    >
      date string from test
       by
       
      <span>
        test-user
      </span>
    </h5>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
  </article>
</div>
`;

exports[`Article component renders correctly in case body ref is null 1`] = `
<div>
  <article
    class="article"
  >
    <header>
      <h1
        class="headline"
      >
        test-title
      </h1>
    </header>
    <div
      class="authorList"
    >
      Article Authors
      <ul>
        <li>
          <a
            aria-label="test-user1 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span />
          </a>
        </li>
        <li>
          <a
            aria-label="test-user2 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span />
          </a>
        </li>
      </ul>
    </div>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
    <div
      class="edit"
    >
      <a
        href="https://github.com/nodejs/nodejs.dev/edit/main/content/learn/test-path"
      >
        <span>
          Edit this page on GitHub
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil "
          data-icon="pencil"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      class="pagination"
    >
      <li>
        <a
          href="test-slug"
          rel="prev"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-left "
            data-icon="angles-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-right: 5px;"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L269.3 256 406.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
              fill="currentColor"
            />
          </svg>
          Prev
        </a>
      </li>
      <li>
        <a
          href="test-slug"
          rel="next"
        >
          Next
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-right "
            data-icon="angles-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-left: 5px;"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L370.7 256 233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L178.7 256 41.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ul>
  </article>
</div>
`;

exports[`Article component should accept and render child components 1`] = `
<div>
  <article
    class="article"
  >
    <header>
      <h1
        class="headline"
      >
        test-title
      </h1>
    </header>
    <div
      class="authorList"
    >
      Article Authors
      <ul>
        <li>
          <a
            aria-label="test-user1 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span />
          </a>
        </li>
        <li>
          <a
            aria-label="test-user2 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span />
          </a>
        </li>
      </ul>
    </div>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
    <div>
      <div>
        test child JSX
      </div>
    </div>
    <div
      class="edit"
    >
      <a
        href="https://github.com/nodejs/nodejs.dev/edit/main/content/learn/test-path"
      >
        <span>
          Edit this page on GitHub
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil "
          data-icon="pencil"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      class="pagination"
    >
      <li>
        <a
          href="test-slug"
          rel="prev"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-left "
            data-icon="angles-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-right: 5px;"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L269.3 256 406.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
              fill="currentColor"
            />
          </svg>
          Prev
        </a>
      </li>
      <li>
        <a
          href="test-slug"
          rel="next"
        >
          Next
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-right "
            data-icon="angles-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-left: 5px;"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L370.7 256 233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L178.7 256 41.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ul>
  </article>
</div>
`;
